--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
     }
     .petal {
       position: absolute;
-      width: 150px;
-      height: 200px;
+      width: 120px;
+      height: 160px;
       transition: opacity 0.9s cubic-bezier(0.22, 0.61, 0.36, 1), transform 1.7s cubic-bezier(.45,1.5,.34,1.01);
       will-change: transform, opacity;
-      transform-origin: center bottom;
-      filter: drop-shadow(0 2px 4px rgba(0,0,0,0.3));
+      transform-origin: 50% 75%;
+      filter: drop-shadow(0 2px 4px rgba(0,0,0,0.2));
+      z-index: 10;
     }
     .petal.fall-left {
       opacity: 0;
@@ -51,10 +52,10 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      width: 150px;
-      height: 150px;
+      width: 120px;
+      height: 120px;
       border-radius: 50%;
-      border: 6px solid #222;
+      border: 4px solid #222;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -87,38 +88,22 @@
   </div>
 </div>
 <script>
-// Petal images - alternating between the 3 types
-const petalImages = [
-  'website_BLUME_blüte_01.png',
-  'website_BLUME_blüte_02.png',
-  'website_BLUME_blüte_03.png'
-];
-
-const petalCount = 12;
+// Direct petals using your PNG files
 const petals = [];
-const center = {x: 300, y: 300}; // Center of 600x600 container
-const petalDistance = 100; // Distance from center to petal base
-
-function createPetal(index) {
-  const angle = (index * 360 / petalCount) - 90; // Start from top
-  const rad = angle * Math.PI / 180;
-  
-  // Calculate position
-  const x = center.x + Math.cos(rad) * petalDistance - 75; // -75 to center the 150px wide petal
-  const y = center.y + Math.sin(rad) * petalDistance - 100; // -100 to position petal base at circle
-  
-  // Create petal element
-  const petal = document.createElement('img');
-  petal.src = petalImages[index % petalImages.length]; // Cycle through the 3 images
-  petal.className = 'petal';
-  petal.style.left = x + 'px';
-  petal.style.top = y + 'px';
-  petal.style.transform = `rotate(${angle + 90}deg)`; // +90 because petals point outward
-  petal.style.transformOrigin = 'center bottom';
-  petal.setAttribute('data-idx', index);
-  
-  return petal;
-}
+const petalElements = [
+  { src: 'website_BLUME_blüte_01.png', x: 200, y: 150, rotation: 0 },
+  { src: 'website_BLUME_blüte_02.png', x: 280, y: 160, rotation: 30 },
+  { src: 'website_BLUME_blüte_03.png', x: 350, y: 200, rotation: 60 },
+  { src: 'website_BLUME_blüte_01.png', x: 380, y: 280, rotation: 90 },
+  { src: 'website_BLUME_blüte_02.png', x: 350, y: 360, rotation: 120 },
+  { src: 'website_BLUME_blüte_03.png', x: 280, y: 400, rotation: 150 },
+  { src: 'website_BLUME_blüte_01.png', x: 200, y: 410, rotation: 180 },
+  { src: 'website_BLUME_blüte_02.png', x: 120, y: 360, rotation: 210 },
+  { src: 'website_BLUME_blüte_03.png', x: 90, y: 280, rotation: 240 },
+  { src: 'website_BLUME_blüte_01.png', x: 120, y: 200, rotation: 270 },
+  { src: 'website_BLUME_blüte_02.png', x: 150, y: 160, rotation: 300 },
+  { src: 'website_BLUME_blüte_03.png', x: 220, y: 140, rotation: 330 }
+];
 
 function renderPetals() {
   const container = document.getElementById('flower-game');
@@ -126,12 +111,18 @@ function renderPetals() {
   const existingPetals = container.querySelectorAll('.petal');
   existingPetals.forEach(p => p.remove());
   
-  // Create new petals
-  for(let i = 0; i < petalCount; i++) {
-    const petal = createPetal(i);
+  // Create petals from your PNG files
+  petalElements.forEach((petalData, index) => {
+    const petal = document.createElement('img');
+    petal.src = petalData.src;
+    petal.className = 'petal';
+    petal.style.left = petalData.x + 'px';
+    petal.style.top = petalData.y + 'px';
+    petal.style.transform = `rotate(${petalData.rotation}deg)`;
+    petal.setAttribute('data-idx', index);
     container.appendChild(petal);
-    petals[i] = petal;
-  }
+    petals[index] = petal;
+  });
 }
 
 function updateCenter(text) {
@@ -148,7 +139,7 @@ function updateCenter(text) {
 }
 
 function nextText(idx) {
-  if(idx === petalCount) return "JA";
+  if(idx === petalElements.length) return "JA";
   return (idx % 2 === 0) ? "JA" : "NEIN";
 }
 
@@ -177,7 +168,7 @@ document.getElementById('flower-game').addEventListener('click', function(e) {
   const text = nextText(current);
   updateCenter(text);
 
-  if(current === petalCount) {
+  if(current === petalElements.length) {
     finished = true;
   }
 });
