--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   </div>
 </div>
 <script>
-// Direct petals using your PNG files
+// Direct petals using your PNG files with correct names
 const petals = [];
 const petalElements = [
   { src: 'website_BLUME_blüte_01.png', x: 200, y: 150, rotation: 0 },
