--- a/index.html
+++ b/index.html
@@ -88,21 +88,21 @@
   </div>
 </div>
 <script>
-// Direct petals using your PNG files with correct names
+// Direct petals using raw GitHub URLs
 const petals = [];
 const petalElements = [
-  { src: 'website_BLUME_blüte_01.png', x: 200, y: 150, rotation: 0 },
-  { src: 'website_BLUME_blüte_02.png', x: 280, y: 160, rotation: 30 },
-  { src: 'website_BLUME_blüte_03.png', x: 350, y: 200, rotation: 60 },
-  { src: 'website_BLUME_blüte_01.png', x: 380, y: 280, rotation: 90 },
-  { src: 'website_BLUME_blüte_02.png', x: 350, y: 360, rotation: 120 },
-  { src: 'website_BLUME_blüte_03.png', x: 280, y: 400, rotation: 150 },
-  { src: 'website_BLUME_blüte_01.png', x: 200, y: 410, rotation: 180 },
-  { src: 'website_BLUME_blüte_02.png', x: 120, y: 360, rotation: 210 },
-  { src: 'website_BLUME_blüte_03.png', x: 90, y: 280, rotation: 240 },
-  { src: 'website_BLUME_blüte_01.png', x: 120, y: 200, rotation: 270 },
-  { src: 'website_BLUME_blüte_02.png', x: 150, y: 160, rotation: 300 },
-  { src: 'website_BLUME_blüte_03.png', x: 220, y: 140, rotation: 330 }
+  { src: 'https://raw.githubusercontent.com/kokojoris242/blume/main/website_BLUME_bl%C3%BCte_01.png', x: 200, y: 150, rotation: 0 },
+  { src: 'https://raw.githubusercontent.com/kokojoris242/blume/main/website_BLUME_bl%C3%BCte_02.png', x: 280, y: 160, rotation: 30 },
+  { src: 'https://raw.githubusercontent.com/kokojoris242/blume/main/website_BLUME_bl%C3%BCte_03.png', x: 350, y: 200, rotation: 60 },
+  { src: 'https://raw.githubusercontent.com/kokojoris242/blume/main/website_BLUME_bl%C3%BCte_01.png', x: 380, y: 280, rotation: 90 },
+  { src: 'https://raw.githubusercontent.com/kokojoris242/blume/main/website_BLUME_bl%C3%BCte_02.png', x: 350, y: 360, rotation: 120 },
+  { src: 'https://raw.githubusercontent.com/kokojoris242/blume/main/website_BLUME_bl%C3%BCte_03.png', x: 280, y: 400, rotation: 150 },
+  { src: 'https://raw.githubusercontent.com/kokojoris242/blume/main/website_BLUME_bl%C3%BCte_01.png', x: 200, y: 410, rotation: 180 },
+  { src: 'https://raw.githubusercontent.com/kokojoris242/blume/main/website_BLUME_bl%C3%BCte_02.png', x: 120, y: 360, rotation: 210 },
+  { src: 'https://raw.githubusercontent.com/kokojoris242/blume/main/website_BLUME_bl%C3%BCte_03.png', x: 90, y: 280, rotation: 240 },
+  { src: 'https://raw.githubusercontent.com/kokojoris242/blume/main/website_BLUME_bl%C3%BCte_01.png', x: 120, y: 200, rotation: 270 },
+  { src: 'https://raw.githubusercontent.com/kokojoris242/blume/main/website_BLUME_bl%C3%BCte_02.png', x: 150, y: 160, rotation: 300 },
+  { src: 'https://raw.githubusercontent.com/kokojoris242/blume/main/website_BLUME_bl%C3%BCte_03.png', x: 220, y: 140, rotation: 330 }
 ];
 
 function renderPetals() {
@@ -173,22 +173,29 @@ document.getElementById('flower-game').addEventListener('click', function(e) {
   }
 });
 
-// Handle image loading errors
+// Handle image loading errors - create simple fallback petals if images fail
 document.addEventListener('DOMContentLoaded', function() {
-  const images = document.querySelectorAll('.petal');
-  images.forEach(img => {
-    img.addEventListener('error', function() {
-      console.log('Failed to load image:', this.src);
-      // Fallback: create a simple colored div
-      const fallback = document.createElement('div');
-      fallback.className = this.className;
-      fallback.style.cssText = this.style.cssText;
-      fallback.style.background = '#faf9f6';
-      fallback.style.border = '3px solid #222';
-      fallback.style.borderRadius = '50% 50% 50% 50% / 60% 60% 40% 40%';
-      this.parentNode.replaceChild(fallback, this);
+  setTimeout(() => {
+    const images = document.querySelectorAll('.petal');
+    images.forEach((img, index) => {
+      img.addEventListener('error', function() {
+        console.log('Failed to load image:', this.src);
+        // Create a simple petal shape as fallback
+        const fallback = document.createElement('div');
+        fallback.className = this.className;
+        fallback.style.cssText = this.style.cssText;
+        fallback.style.width = '80px';
+        fallback.style.height = '120px';
+        fallback.style.background = '#f8f8f8';
+        fallback.style.border = '2px solid #ddd';
+        fallback.style.borderRadius = '50% 50% 50% 50% / 60% 60% 40% 40%';
+        fallback.style.boxShadow = '0 2px 4px rgba(0,0,0,0.2)';
+        fallback.setAttribute('data-idx', this.getAttribute('data-idx'));
+        this.parentNode.replaceChild(fallback, this);
+        petals[index] = fallback;
+      });
     });
-  });
+  }, 100);
 });
 </script>
 </body>
