--- a/index.html
+++ b/index.html
@@ -90,21 +90,21 @@
   </div>
 </div>
 <script>
-// Using raw GitHub URLs that will definitely work
+// Using JSDelivr CDN - this should definitely work
 const petals = [];
 const petalElements = [
-  { src: 'https://raw.githubusercontent.com/kokojoris242/blume/main/website_BLUME_ble_01.png', x: 200, y: 150, rotation: 0 },
-  { src: 'https://raw.githubusercontent.com/kokojoris242/blume/main/website_BLUME_ble_02.png', x: 280, y: 160, rotation: 30 },
-  { src: 'https://raw.githubusercontent.com/kokojoris242/blume/main/website_BLUME_ble_03.png', x: 350, y: 200, rotation: 60 },
-  { src: 'https://raw.githubusercontent.com/kokojoris242/blume/main/website_BLUME_ble_01.png', x: 380, y: 280, rotation: 90 },
-  { src: 'https://raw.githubusercontent.com/kokojoris242/blume/main/website_BLUME_ble_02.png', x: 350, y: 360, rotation: 120 },
-  { src: 'https://raw.githubusercontent.com/kokojoris242/blume/main/website_BLUME_ble_03.png', x: 280, y: 400, rotation: 150 },
-  { src: 'https://raw.githubusercontent.com/kokojoris242/blume/main/website_BLUME_ble_01.png', x: 200, y: 410, rotation: 180 },
-  { src: 'https://raw.githubusercontent.com/kokojoris242/blume/main/website_BLUME_ble_02.png', x: 120, y: 360, rotation: 210 },
-  { src: 'https://raw.githubusercontent.com/kokojoris242/blume/main/website_BLUME_ble_03.png', x: 90, y: 280, rotation: 240 },
-  { src: 'https://raw.githubusercontent.com/kokojoris242/blume/main/website_BLUME_ble_01.png', x: 120, y: 200, rotation: 270 },
-  { src: 'https://raw.githubusercontent.com/kokojoris242/blume/main/website_BLUME_ble_02.png', x: 150, y: 160, rotation: 300 },
-  { src: 'https://raw.githubusercontent.com/kokojoris242/blume/main/website_BLUME_ble_03.png', x: 220, y: 140, rotation: 330 }
+  { src: 'https://cdn.jsdelivr.net/gh/kokojoris242/blume@main/website_BLUME_ble_01.png', x: 200, y: 150, rotation: 0 },
+  { src: 'https://cdn.jsdelivr.net/gh/kokojoris242/blume@main/website_BLUME_ble_02.png', x: 280, y: 160, rotation: 30 },
+  { src: 'https://cdn.jsdelivr.net/gh/kokojoris242/blume@main/website_BLUME_ble_03.png', x: 350, y: 200, rotation: 60 },
+  { src: 'https://cdn.jsdelivr.net/gh/kokojoris242/blume@main/website_BLUME_ble_01.png', x: 380, y: 280, rotation: 90 },
+  { src: 'https://cdn.jsdelivr.net/gh/kokojoris242/blume@main/website_BLUME_ble_02.png', x: 350, y: 360, rotation: 120 },
+  { src: 'https://cdn.jsdelivr.net/gh/kokojoris242/blume@main/website_BLUME_ble_03.png', x: 280, y: 400, rotation: 150 },
+  { src: 'https://cdn.jsdelivr.net/gh/kokojoris242/blume@main/website_BLUME_ble_01.png', x: 200, y: 410, rotation: 180 },
+  { src: 'https://cdn.jsdelivr.net/gh/kokojoris242/blume@main/website_BLUME_ble_02.png', x: 120, y: 360, rotation: 210 },
+  { src: 'https://cdn.jsdelivr.net/gh/kokojoris242/blume@main/website_BLUME_ble_03.png', x: 90, y: 280, rotation: 240 },
+  { src: 'https://cdn.jsdelivr.net/gh/kokojoris242/blume@main/website_BLUME_ble_01.png', x: 120, y: 200, rotation: 270 },
+  { src: 'https://cdn.jsdelivr.net/gh/kokojoris242/blume@main/website_BLUME_ble_02.png', x: 150, y: 160, rotation: 300 },
+  { src: 'https://cdn.jsdelivr.net/gh/kokojoris242/blume@main/website_BLUME_ble_03.png', x: 220, y: 140, rotation: 330 }
 ];
 
 function renderPetals() {
